# flat_contract_mmr

./: Cargo.toml  README.md  lib.rs
arber/: Cargo copy.toml  Cargo.toml
arber/src/: hash.rs  mmr.rs  mmr_tests.rs  proof.rs  store.rs
arber/tests/: merkle_proof.rs
